fix spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -199,7 +199,15 @@
 }
 
 .prose details > *:not(summary) {
-  padding: 0 1.125rem 1rem;
+  padding: 0.75rem 1.125rem 1rem;
+}
+
+.prose details p {
+  margin-bottom: 0;
+}
+
+.prose details table {
+  margin-top: 0.5rem;
 }
 
 /* ============================================================
